--- a/lab4/lab4/MainWindow.xaml
+++ b/lab4/lab4/MainWindow.xaml
@@ -7,6 +7,34 @@
         mc:Ignorable="d"
         Title="TBoKN lab4. Made by AJIOB" Height="350" Width="525">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="3*"/>
+                <RowDefinition Height="7*"/>
+            </Grid.RowDefinitions>
 
+            <TextBox 
+                Name="inputTextBox" 
+                Margin="5" 
+                HorizontalScrollBarVisibility="Auto" 
+                VerticalScrollBarVisibility="Auto" 
+                AcceptsReturn="True"
+                AcceptsTab="True"
+                />
+            <TextBox 
+                Name="outputTextBox" 
+                Margin="5" 
+                Grid.Row="1" 
+                HorizontalScrollBarVisibility="Auto" 
+                VerticalScrollBarVisibility="Auto" 
+                AcceptsReturn="True"
+                AcceptsTab="True"
+                IsReadOnly="True"
+                />
+        </Grid>
     </Grid>
 </Window>
