--- a/lab4/lab4/MainWindow.xaml
+++ b/lab4/lab4/MainWindow.xaml
@@ -17,24 +17,41 @@
                 <RowDefinition Height="7*"/>
             </Grid.RowDefinitions>
 
-            <TextBox 
-                Name="inputTextBox" 
-                Margin="5" 
-                HorizontalScrollBarVisibility="Auto" 
-                VerticalScrollBarVisibility="Auto" 
-                AcceptsReturn="True"
-                AcceptsTab="True"
-                />
-            <TextBox 
-                Name="outputTextBox" 
-                Margin="5" 
-                Grid.Row="1" 
-                HorizontalScrollBarVisibility="Auto" 
-                VerticalScrollBarVisibility="Auto" 
-                AcceptsReturn="True"
-                AcceptsTab="True"
-                IsReadOnly="True"
-                />
+            <Grid>
+                <TextBox Name="inputTextBox" Margin="5" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" AcceptsReturn="True" AcceptsTab="True" IsUndoEnabled="False"/>
+            
+                <!--Input text watermark-->
+                <TextBlock IsHitTestVisible="False" Text="Input your text here" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="8,6,0,0" Foreground="DarkGray">
+                    <TextBlock.Style>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="Visibility" Value="Collapsed"/>
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding Text, ElementName=inputTextBox}" Value="">
+                                    <Setter Property="Visibility" Value="Visible"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
+            </Grid>
+
+            <Grid Grid.Row="1">
+                <TextBox Name="outputTextBox" Margin="5" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" AcceptsReturn="True" AcceptsTab="True" IsReadOnly="True"/>
+
+                <!--Output text watermark-->
+                <TextBlock IsHitTestVisible="False" Text="Output text will be here" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="8,6,0,0" Foreground="DarkGray">
+                    <TextBlock.Style>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="Visibility" Value="Collapsed"/>
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding Text, ElementName=outputTextBox}" Value="">
+                                    <Setter Property="Visibility" Value="Visible"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
+            </Grid>
         </Grid>
     </Grid>
 </Window>
