--- a/lab4/lab4/App.xaml
+++ b/lab4/lab4/App.xaml
@@ -2,6 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:lab4"
+             Startup="OnAppStarted"
+             Exit="OnAppClosed"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
