--- a/lab4/lab4/MainWindow.xaml
+++ b/lab4/lab4/MainWindow.xaml
@@ -74,21 +74,23 @@
                 <RowDefinition />
             </Grid.RowDefinitions>
 
-            <TextBlock Grid.Row="0" Text="Current port:" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5" />
+            <TextBlock Grid.Row="0" Text="Current port:" VerticalAlignment="Center" HorizontalAlignment="Right"
+                       Margin="5" />
             <TextBlock Grid.Row="1" Text="Baudrate:" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5" />
             <TextBlock Grid.Row="2" Text="Data bits:" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5" />
             <TextBlock Grid.Row="3" Text="Stop bits:" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5" />
             <TextBlock Grid.Row="4" Text="Parity:" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5" />
-            <TextBlock Grid.Row="5" Text="Flow control:" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5" />
+            <TextBlock Grid.Row="5" Text="Flow control:" VerticalAlignment="Center" HorizontalAlignment="Right"
+                       Margin="5" />
 
             <Button Grid.Row="6" Grid.ColumnSpan="2" Margin="5" Click="StartStopButtonPressed" />
 
-            <ComboBox Grid.Row="0" Grid.Column="1" Margin="5" Name="CurrentPortComboBox"/>
-            <ComboBox Grid.Row="1" Grid.Column="1" Margin="5" Name="BaudrateComboBox"/>
-            <ComboBox Grid.Row="2" Grid.Column="1" Margin="5" Name="DataBitsComboBox"/>
-            <ComboBox Grid.Row="3" Grid.Column="1" Margin="5" Name="StopBitsComboBox"/>
-            <ComboBox Grid.Row="4" Grid.Column="1" Margin="5" Name="ParityComboBox"/>
-            <ComboBox Grid.Row="5" Grid.Column="1" Margin="5" Name="FlowControlComboBox"/>
+            <ComboBox Grid.Row="0" Grid.Column="1" Margin="5" Name="CurrentPortComboBox" />
+            <ComboBox Grid.Row="1" Grid.Column="1" Margin="5" Name="BaudrateComboBox" />
+            <ComboBox Grid.Row="2" Grid.Column="1" Margin="5" Name="DataBitsComboBox" />
+            <ComboBox Grid.Row="3" Grid.Column="1" Margin="5" Name="StopBitsComboBox" />
+            <ComboBox Grid.Row="4" Grid.Column="1" Margin="5" Name="ParityComboBox" />
+            <ComboBox Grid.Row="5" Grid.Column="1" Margin="5" Name="FlowControlComboBox" />
         </Grid>
     </Grid>
 </Window>
