--- a/lab4/lab4/MainWindow.xaml
+++ b/lab4/lab4/MainWindow.xaml
@@ -34,7 +34,7 @@
         <!--Flow control-->
         <ObjectDataProvider ObjectType="enumUtils:EnumViewUtility" MethodName="GetValuesAndDescriptionsFlowControl" x:Key="FlowControl"/>
     </Window.Resources>
-    <Grid>
+    <Grid DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:MainWindow}}}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
             <ColumnDefinition />
@@ -49,7 +49,7 @@
                 <TextBox Name="InputTextBox" Margin="5" HorizontalScrollBarVisibility="Auto"
                          VerticalScrollBarVisibility="Auto" AcceptsReturn="True" AcceptsTab="True"
                          IsUndoEnabled="False" 
-                         IsEnabled="{Binding Path=IsPortOpen, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:MainWindow}}}" TextChanged="SendText"/>
+                         IsEnabled="{Binding Path=IsPortOpen}" TextChanged="SendText"/>
 
                 <!--Input text watermark-->
                 <TextBlock IsHitTestVisible="False" VerticalAlignment="Top"
@@ -62,7 +62,7 @@
                                 <DataTrigger Binding="{Binding Text, ElementName=InputTextBox}" Value="">
                                     <Setter Property="Visibility" Value="Visible" />
                                 </DataTrigger>
-                                <DataTrigger Binding="{Binding Path=IsPortOpen, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:MainWindow}}}" 
+                                <DataTrigger Binding="{Binding Path=IsPortOpen}" 
                                              Value="False">
                                     <Setter Property="Text" Value="First of all, start connection, please" />
                                 </DataTrigger>
@@ -117,44 +117,37 @@
             <TextBlock Grid.Row="5" Grid.Column="0" Text="Flow control:" VerticalAlignment="Center" HorizontalAlignment="Right"
                        Margin="5" />
 
-            <Button Grid.Row="6" Grid.ColumnSpan="2" Grid.Column="0" Margin="5" Click="StartStopButtonPressed" Name="StartStopButton">
-                <Button.Content>
-                    <Binding Path="StartStopButtonText">
-                        <Binding.RelativeSource>
-                            <RelativeSource Mode="FindAncestor" AncestorType="{x:Type local:MainWindow}"></RelativeSource>
-                        </Binding.RelativeSource>
-                    </Binding>
-                </Button.Content>
-            </Button>
+            <Button Grid.Row="6" Grid.ColumnSpan="2" Grid.Column="0" Margin="5" Click="StartStopButtonPressed" Name="StartStopButton"
+                    Content="{Binding Path=StartStopButtonText}"/>
 
             <ComboBox Grid.Row="0" Grid.Column="1" Margin="5" Name="CurrentPortComboBox" DropDownOpened="PortsRefresh" 
-                      ItemsSource="{Binding Path=Ports, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:MainWindow}}}"
-                      IsEnabled="{Binding Path=IsPortNotOpen, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:MainWindow}}}"/>
+                      ItemsSource="{Binding Path=Ports}"
+                      IsEnabled="{Binding Path=IsPortNotOpen}"/>
 
             <ComboBox Grid.Row="1" Grid.Column="1" Margin="5" Name="BaudrateComboBox" 
                       ItemsSource="{Binding Source={StaticResource Baudrate}}"
                       DisplayMemberPath="Description"
                       SelectedValuePath="Value"
                       SelectedValue="9600"
-                      IsEnabled="{Binding Path=IsPortNotOpen, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:MainWindow}}}"/>
+                      IsEnabled="{Binding Path=IsPortNotOpen}"/>
             <ComboBox Grid.Row="2" Grid.Column="1" Margin="5" Name="DataBitsComboBox" 
                       ItemsSource="{Binding Source={StaticResource DataBits}}"
                       DisplayMemberPath="Description"
                       SelectedValuePath="Value"
                       SelectedValue="8"
-                      IsEnabled="{Binding Path=IsPortNotOpen, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:MainWindow}}}"/>
+                      IsEnabled="{Binding Path=IsPortNotOpen}"/>
             <ComboBox Grid.Row="3" Grid.Column="1" Margin="5" Name="StopBitsComboBox" 
                       ItemsSource="{Binding Source={StaticResource StopBits}}"
                       DisplayMemberPath="Description"
                       SelectedValuePath="Value"
                       SelectedValue="1"
-                      IsEnabled="{Binding Path=IsPortNotOpen, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:MainWindow}}}"/>
+                      IsEnabled="{Binding Path=IsPortNotOpen}"/>
             <ComboBox Grid.Row="4" Grid.Column="1" Margin="5" Name="ParityComboBox" 
                       ItemsSource="{Binding Source={StaticResource Parity}}"
                       DisplayMemberPath="Description"
                       SelectedValuePath="Value"
                       SelectedValue="None"
-                      IsEnabled="{Binding Path=IsPortNotOpen, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:MainWindow}}}"/>
+                      IsEnabled="{Binding Path=IsPortNotOpen}"/>
             <ComboBox Grid.Row="5" Grid.Column="1" Margin="5" Name="FlowControlComboBox" 
                       ItemsSource="{Binding Source={StaticResource FlowControl}}"
                       DisplayMemberPath="Description"
