--- a/lab5/lab5/MainWindow.xaml
+++ b/lab5/lab5/MainWindow.xaml
@@ -1,15 +1,16 @@
-﻿<Window x:Class="lab4.MainWindow"
+﻿<Window x:Class="lab5.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:lab4"
-        xmlns:enums="clr-namespace:lab4.Enums"
-        xmlns:enumUtils="clr-namespace:lab4.Enums.Utilities"
-        xmlns:sysPorts="clr-namespace:System.IO.Ports;assembly=System"
+        xmlns:local="clr-namespace:lab5"
+        xmlns:enums="clr-namespace:lab5.Enums"
+        xmlns:enumUtils="clr-namespace:lab5.Enums.Utilities"
+        xmlns:sysPorts="clr-namespace:System.IO.Ports;assembly=System" 
+        xmlns:lab5="clr-namespace:lab5"
         mc:Ignorable="d"
         Closed="OnWindowClosed"
-        Title="TBoKN lab4. Made by AJIOB" Height="300" Width="525">
+        Title="TBoKN lab5. Made by AJIOB" Height="300" Width="525">
     <Window.Resources>
         <!--Baudrate-->
         <ObjectDataProvider ObjectType="enumUtils:EnumViewUtility" MethodName="GetValuesAndDescriptions" x:Key="Baudrate">
